Bug 1942227 - [devtools] Fix editor notification close button color in dark mode. r=devtools-reviewers,jdescottes.
Differential Revision: https://phabricator.services.mozilla.com/D234640

--- a/devtools/client/debugger/src/components/App.css
+++ b/devtools/client/debugger/src/components/App.css
@@ -100,6 +100,8 @@ button:hover {
       height: 16px;
       content: "";
       background-image: url("chrome://devtools/skin/images/close.svg");
+      fill: var(--theme-icon-color);
+      -moz-context-properties: fill;
     }
   }
 }
